product_docs/docs/migration_portal/2.9/03_mp_using_portal/01_mp_overview_home.mdx
---
title: "Overview of the Migration Portal Home Page"
---

<div id="mp_overview_home" class="registered_link"></div>


The Migration Portal home page provides quick access to migration tools.

![*The Migration Portal home page.*](../images/mp_overview_home.png)

The Migration Portal home page allows access to the following Migration Portal features:

1.  **Projects**: The `Projects` panel displays a list of assessed projects.
2.  **Create project**: Click `+ New` (the button located to the right of the `Projects` label) to create a new project.
3.  **Overview**: The `Overview` panel provides details about the selected project and displays the compatibility percentage after schema assessment.
4.  **Migrate**: Use the `Migrate` button to either download an EDB Postgres Advanced Server compatible `.sql` file or to migrate a schema to an EDB Postgres Advanced Server on-premise or on cloud. For more information, see `Schema Migration <mp_schema_migration>`.
5.  **Report**: Use the `Report` button to view and download the schema assessment report.
6.  **Delete**: Use the `Delete` button to delete a selected project.
7.  **Warning sign**: A warning message is displayed if a project or a schema is less than 70% compatible or any DDL doesn’t succeed after multiple attempts.
8.  **Upload DDL file**: Use the `Upload new schema` button to upload a new or additional DDL file.
9.  **Schemas**: The `Schemas` panel displays the assessment result from an uploaded DDL file.
10. **Quick help**: The `Quick help` panel contains all the help guides.
11. **Portal Wiki**: The `Portal Wiki` has links to product information and different help guides.
